--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -153,4 +153,4 @@ $transitionSpeed: 0.3s ease;
   -webkit-box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.4);
 }
 
-@include fo-colors(#2e5266, #6e8898, #f77);
+@include fo-colors(#2e5266, #008898, #f77);
