--- a/lib/components/fo_image_file/fo_image_file_component.html
+++ b/lib/components/fo_image_file/fo_image_file_component.html
@@ -13,7 +13,7 @@
               square
               white
               [material]="materialIcons"
-              (click)="onDelete(); $event.stopPropagation()">
+              (click)="onDelete($event)">
      </fo-icon>
      <ng-container *ngIf="source == null || source.isEmpty">
           <fo-icon class="add"
