Added attribute FoTextInput.autocomplete

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -11,6 +11,7 @@
       {{leadingText}}
     </span>
     <input type="{{type}}"
+           [attr.autocomplete]="autocomplete"
            [autoFocus]="autoFocus"
            [disabled]="disabled == true"
            [placeholder]="placeholder"
