Updated FoQuiz to use OnPush, and some visual improvements

--- a/lib/components/fo_quiz/fo_question_component.scss
+++ b/lib/components/fo_quiz/fo_question_component.scss
@@ -42,6 +42,9 @@
     color: white;
     display: flex;
     justify-content: space-between;
+    fo-button.is-hidden {
+      display: none;
+    }
     div#left {
       width: 100px;
     }
