--- a/lib/components/fo_quiz/fo_option_component.html
+++ b/lib/components/fo_quiz/fo_option_component.html
@@ -2,7 +2,7 @@
            square
            noHover
            [label]="model.label"
-           [themeBackgroundColor]="currentButtonColor"
+           [themeBackgroundColor]="buttonColor"
            (trigger)="onSelect()"
            [disabled]="disabled">
 </fo-button>
