--- a/lib/components/fo_quiz/fo_option_component.scss
+++ b/lib/components/fo_quiz/fo_option_component.scss
@@ -1,6 +1,7 @@
 :host {
   display: block;
   margin: 8px 0;
+  opacity: 0.7;
   ::ng-deep fo-button {
     button {
       div#center {
@@ -9,4 +10,7 @@
       }
     }
   }
+}
+:host.selected {
+  opacity: 1;
 }
