--- a/lib/components/fo_quiz/fo_question_component.html
+++ b/lib/components/fo_quiz/fo_question_component.html
@@ -11,8 +11,8 @@
       <fo-option *ngFor="let option of model.options"
                  [model]="option"
                  [disabled]="disabled"
+                 [class.selected]="option.selected"
                  [buttonColor]="buttonColor"
-                 [buttonColorActive]="buttonColorActive"
                  (trigger)="onOptionTrigger($event)"></fo-option>
     </div>
   </div>
@@ -20,14 +20,13 @@
 <fo-quiz *ngIf="currentChildQuiz != null"
          [disabled]="disabled"
          [buttonColor]="buttonColor"
-         [buttonColorActive]="buttonColorActive"
          [model]="currentChildQuiz"
          (done)="onChildQuizDone($event)">
 </fo-quiz>
 <div id="stepButtons"
      *ngIf="currentChildQuiz == null">
   <div id="left">
-    <fo-button *ngIf="prevButtonLabel != null"
+    <fo-button *ngIf="prevButtonLabel != null && !rightHidden"
                white
                square
                fullWidth
@@ -37,12 +36,12 @@
     </fo-button>
   </div>
   <div id="right">
-    <fo-button white
+    <fo-button *ngIf="selectedOptions.isNotEmpty && !rightHidden"
+               white
                square
                fullWidth
                [label]="nextButtonLabel | capitalize"
-               [themeBackgroundColor]="buttonColorActive"
-               [disabled]="selectedOptions.isEmpty"
+               [themeBackgroundColor]="buttonColor"
                (trigger)="onNextTrigger()">
     </fo-button>
   </div>
