made margin smaller for quiz step-buttons

--- a/lib/components/fo_quiz/fo_question_component.scss
+++ b/lib/components/fo_quiz/fo_question_component.scss
@@ -37,7 +37,7 @@
   }
 
   div#stepButtons {
-    margin-top: 2em;
+    margin-top: 16px;
     color: white;
     display: flex;
     justify-content: space-between;
