removed transform stuff from modal

--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -1,7 +1,6 @@
 <div *ngIf="visible"
      id="modalOverlay">
-  <div id="modalContent"
-       [style.transform]="transform">
+  <div id="modalContent">
     <div id="modalHeader"
          *ngIf="header != null || showCloseButton == true">
       <div id="modalHeaderTitle">
