--- a/lib/components/fo_quiz/fo_question_component.html
+++ b/lib/components/fo_quiz/fo_question_component.html
@@ -2,7 +2,7 @@
   <div class="questionContainer"
        [class.transition]="transition"
        [class.is-hidden]="leftHidden">
-    <h3 class="question">{{model.label}}</h3>
+    <h3 class="question"><span *ngIf="index != null">{{index+1}}.&nbsp;</span>{{model.label}}</h3>
   </div>
   <div class="answerContainer"
        [class.transition]="transition"
