--- a/lib/components/fo_quiz/fo_quiz_component.html
+++ b/lib/components/fo_quiz/fo_quiz_component.html
@@ -1,4 +1,5 @@
-<fo-question [model]="activeQuestion"
+<fo-question [index]="activeIndex"
+             [model]="activeQuestion"
              [disabled]="disabled"
              [buttonColor]="buttonColor"
              [prevButtonLabel]="prevButtonLabel"
