--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -5,7 +5,6 @@
   .hidden {
     display: none;
   }
-  
 
   div#modalOverlay {
     background-color: rgba(0, 0, 0, 0.6);
@@ -21,6 +20,7 @@
 
     div#modalContent {
       @include boxShadow();
+      position: relative;
       display: flex;
       flex-direction: column;
       background-color: white;
