--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -1,4 +1,3 @@
-@import "package:angular_components/material_icon/mixins";
 @import "../../constants.scss";
 
 :host {
@@ -13,7 +12,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 1em;
-    @include material-icon-size(1em);
     user-select: none;
     -webkit-user-select: none;
     transition: all 0.3s ease;
@@ -29,8 +27,7 @@
     justify-content: space-between;
     align-items: center;
 
-    fo-icon,
-    material-icon {
+    fo-icon {
       margin: 0;
     }
 
