--- a/lib/components/fo_dropdown/fo_dropdown_component.html
+++ b/lib/components/fo_dropdown/fo_dropdown_component.html
@@ -4,6 +4,7 @@
      [style.height]="height"
      [style.opacity]="opacity"
      [class.visible]="visible"
+     [class.noShadow]="shadow == false"
      (click)="$event.stopPropagation()">
   <div id="dropdownContent"
        [style.width]="elementWidth"
