--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -6,7 +6,7 @@
                     [attr.square]="square"
                     [attr.noFocusShadow]="noFocusShadow"
                     [showSearch]="showSearch"
-                    [actionButtonLabel]="msgAdd | capitalize"
+                    [actionButtonLabel]="$pipe.capitalize(msgAdd)"
                     [materialIcons]="materialIcons"
                     [dropdownMaxHeight]="dropdownMaxHeight"
                     [constrainToViewPort]="constrainToViewPort"
