--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -7,7 +7,7 @@
         <h2 *ngIf="header != null">{{header}}</h2>
       </div>
       <fo-button *ngIf="showCloseButton == true"
-                 white
+                 [white]="true"
                  [themeColor]="buttonColor"
                  [themeBackgroundColor]="buttonBackgroundColor"
                  icon="close"
