--- a/lib/components/fo_quiz/fo_option_component.html
+++ b/lib/components/fo_quiz/fo_option_component.html
@@ -1,6 +1,5 @@
-<fo-button fullWidth
-           square
-           noHover
+<fo-button class="fullWidth"
+           [square]="true"
            [label]="model.label"
            [themeBackgroundColor]="buttonColor"
            (trigger)="onSelect()"
