--- a/lib/components/fo_dropdown/fo_dropdown_component.scss
+++ b/lib/components/fo_dropdown/fo_dropdown_component.scss
@@ -32,10 +32,7 @@
       position: relative;
     }
   }
-}
-
-:host[noShadow] {
-  div#fixer {
+  div#fixer.noShadow {
     box-shadow: none;
     -webkit-box-shadow: none;
 
