--- a/lib/components/fo_quiz/fo_question_component.html
+++ b/lib/components/fo_quiz/fo_question_component.html
@@ -27,20 +27,20 @@
      *ngIf="currentChildQuiz == null">
   <div id="left">
     <fo-button *ngIf="prevButtonLabel != null && !rightHidden"
-               white
-               square
-               fullWidth
-               [label]="prevButtonLabel | capitalize"
+               [white]="true"
+               [square]="true"
+               class="fullWidth"
+               [label]="$pipe.capitalize(prevButtonLabel)"
                [themeBackgroundColor]="buttonColor"
                (trigger)="onPrevTrigger()">
     </fo-button>
   </div>
   <div id="right">
     <fo-button *ngIf="selectedOptions.isNotEmpty && !rightHidden"
-               white
-               square
-               fullWidth
-               [label]="nextButtonLabel | capitalize"
+               [white]="true"
+               [square]="true"
+               class="fullWidth"
+               [label]="$pipe.capitalize(nextButtonLabel)"
                [themeBackgroundColor]="buttonColor"
                (trigger)="onNextTrigger()">
     </fo-button>
