--- a/lib/constants.scss
+++ b/lib/constants.scss
@@ -1,5 +1,6 @@
-$font-size-6: 56rem/14;
-$font-size-5: 40rem/14;
-$font-size-4: 24rem/14;
-$font-size-3: 18rem/14;
-$font-size-2: 16rem/14;
+@use "sass:math";
+$font-size-6: math.div(56rem, 14);
+$font-size-5: math.div(40rem, 14);
+$font-size-4: math.div(24rem, 14);
+$font-size-3: math.div(18rem, 14);
+$font-size-2: math.div(16rem, 14);
