fixed a bunch of build errors

--- a/lib/components/fo_dropdown/fo_dropdown_component.html
+++ b/lib/components/fo_dropdown/fo_dropdown_component.html
@@ -5,6 +5,7 @@
      [style.opacity]="opacity"
      [class.visible]="visible"
      [class.noShadow]="shadow == false"
+     [class.square]="square"
      (click)="$event.stopPropagation()">
   <div id="dropdownContent"
        [style.width]="elementWidth"
