--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -2,9 +2,8 @@
                     [options]="filteredOptions"
                     [disabled]="disabled"
                     [placeholder]="placeholder"
-                    [attr.dense]="dense"
-                    [attr.square]="square"
-                    [attr.noFocusShadow]="noFocusShadow"
+                    [square]="square"
+                    [focusShadow]="focusShadow"
                     [showSearch]="showSearch"
                     [actionButtonLabel]="$pipe.capitalize(msgAdd)"
                     [materialIcons]="materialIcons"
