--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -17,7 +17,7 @@
     </span>
     <input type="{{type}}"
            [attr.autocomplete]="autocomplete"
-           [attr.autoFocus]="autoFocus"
+           [attr.autoFocus]="autoFocus.toString()"
            [disabled]="disabled == true"
            [placeholder]="placeholder"
            [ngModel]="value"
@@ -37,18 +37,18 @@
                [icon]="actionButtonIcon"
                [materialIcon]="materialIcons"
                [square]="true"
-               [disabled]="disabled || control?.valid == false || value?.isEmpty != false"
-               (trigger)="actionButtonController?.add($event)"></fo-button>
+               [disabled]="disabled || control?.valid == false || value.isNotEmpty"
+               (trigger)="actionButtonController.add($event)"></fo-button>
   </div>
   <fo-error-output *ngIf="(hasFocus == true || hideErrorsOnBlur == false) && errorMessage != null && control?.pristine != true && dropdownVisible == false"
-                   [message]="errorMessage">
+                   [message]="errorMessage!">
   </fo-error-output>
   <fo-dropdown-list *ngIf="options != null"
                     [options]="options"
                     [showCategoryLabels]="showDropdownCategoryLabels"
                     [offsetTop]="dropdownTopOffset"
                     [shadow]="focusShadow"
-                    [attr.square]="square"
+                    [square]="square"
                     [filter]="filterValue"
                     [maxHeight]="dropdownMaxHeight"
                     [constrainToViewPort]="constrainToViewPort"
