fixed some null issues

--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -11,7 +11,7 @@
                  [icon]="selectedOption?.renderIcon"
                  [material]="materialIcons">
         </fo-icon>
-        <span>{{selectedOption == null ? placeholder : selectedOption!.renderLabel!}}</span>
+        <span>{{selectedOption == null ? placeholder : selectedOption!.renderLabel}}</span>
       </div>
       <fo-icon class="arrow"
                [material]="true"
