--- a/lib/components/fo_icon/fo_icon_component.html
+++ b/lib/components/fo_icon/fo_icon_component.html
@@ -1,4 +1,5 @@
-<span *ngIf="material == true">{{icon}}</span>
+<span class="material-icons"
+      *ngIf="material == true">{{icon}}</span>
 <ng-container *ngIf="material != true">
   <span [class]="iconClass"
         [style.font-size]="size">
