multi input buttons round when square is false

--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -17,6 +17,6 @@
     <li *ngFor="let option of addedOptions"
         (click)="onRemove(option.renderId)"
         [class.disabled]="disabled"
-        [class.round]="square == null"> {{option.renderLabel}} </li>
+        [class.round]="square == false"> {{option.renderLabel}} </li>
   </ul>
 </div>
