--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -1,9 +1,7 @@
 <fo-label [value]="label"
           [class.noLeftBorder]="leftBorder == false"
           [class.noRightBorder]="rightBorder == false"
-          [class.noFocusShadow]="focusShadow == false"
-          [class.centerValue]="centerValue"
-          [class.square]="square">
+          [class.centerValue]="centerValue">
   <div id="flexContainer"
        [class.error]="control?.valid == false && control?.pristine != true"
        [class.disabled]="disabled == true">
@@ -36,7 +34,6 @@
                [label]="actionButtonLabel"
                [icon]="actionButtonIcon"
                [materialIcon]="materialIcons"
-               [square]="true"
                [disabled]="disabled || control?.valid == false || value.isNotEmpty"
                (trigger)="actionButtonController.add($event)"></fo-button>
   </div>
@@ -47,8 +44,6 @@
                     [options]="options"
                     [showCategoryLabels]="showDropdownCategoryLabels"
                     [offsetTop]="dropdownTopOffset"
-                    [shadow]="focusShadow"
-                    [square]="square"
                     [filter]="filterValue"
                     [maxHeight]="dropdownMaxHeight"
                     [constrainToViewPort]="constrainToViewPort"
