--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -27,7 +27,6 @@
 
     div#selector {
       background-color: white;
-      transition: box-shadow $transitionSpeed;
       flex: 1;
       display: flex;
       align-items: center;
@@ -56,7 +55,8 @@
     }
 
     ::ng-deep fo-button > button {
-      border: 0;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
   }
 }
@@ -75,11 +75,5 @@
         margin: 0.5rem;
       }
     }
-  }
-}
-
-:host[square] {
-  div#flexContainer {
-    border-radius: 0;
   }
 }
