--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -50,7 +50,8 @@
     }
 
     ::ng-deep fo-button > button {
-      border: 0;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
   }
 
