rearranged some files

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -1,7 +1,7 @@
 @import "../../constants.scss";
 @import "../../mixins.scss";
 @import "../fo_button/mixins";
-@import "../fo_dropdown_list/mixins";
+@import "../../src/components/fo_dropdown_list/mixins";
 @import "shared";
 
 :host {
