WIP: null safety migration

--- a/lib/components/fo_file_upload/fo_file_upload_component.html
+++ b/lib/components/fo_file_upload/fo_file_upload_component.html
@@ -33,7 +33,7 @@
                (click)="clearSelection()"></fo-icon>
     </ng-container> -->
   </p>
-  <p class="color-alert"
-     *ngIf="file != null && file?.size > maxByteSize"> {{$pipe.capitalize(msgMaxFilesizeExceeded)}}
-    ({{(maxByteSize/1024).ceil()}}kb) </p>
+  <!-- <p class="color-alert"
+     *ngIf="file?.size != null && file.size > maxByteSize"> {{$pipe.capitalize(msgMaxFilesizeExceeded)}}
+    ({{(maxByteSize/1024).ceil()}}kb) </p> -->
 </div>
