--- a/lib/components/fo_panel/fo_panel_component.html
+++ b/lib/components/fo_panel/fo_panel_component.html
@@ -1,7 +1,7 @@
 <div id="foPanel"
      *ngIf="visible">
   <div id="panelHeader">
-    <h3>{{$pipe.capitalize(header)}}</h3>
+    <h3 *ngIf="header != null">{{$pipe.capitalize(header!)}}</h3>
     <fo-button [white]="true"
                icon="close"
                (trigger)="onClose()">
