--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -10,6 +10,7 @@ $transitionSpeed: 0.3s ease;
 @import "components/fo_modal/mixins";
 @import "components/fo_tab/mixins";
 @import "components/fo_text_input/mixins";
+@import "components/fo_load_indicator/mixins";
 
 @mixin foregroundColor($color) {
   color: $color;
@@ -31,6 +32,7 @@ $transitionSpeed: 0.3s ease;
   $alertColorDark: darken($alertColor, $lightstep);
   $alertColorBright: lighten($alertColor, $lightstep);
 
+  @include fo-load-indicator-color($primaryColor);
   @include fo-button-colors(white, $primaryColor, $grayColorBright);
   @include fo-dropdown-border-color($grayColorBright);
   @include fo-dropdown-list-colors($primaryColor, $grayColor, $grayColorBright);
