--- a/lib/components/fo_file_upload/fo_file_upload_component.html
+++ b/lib/components/fo_file_upload/fo_file_upload_component.html
@@ -6,14 +6,18 @@
       <input #input
              type="file"
              (change)="onFileChange($event)"
+             [disabled]="disabled || uploading"
              [accept]="accept" />
-      <div class="margin-top-small margin-bottom-small">
-         <fo-button (trigger)="input.click()"
+      <div id="content"
+           class="margin-top-small margin-bottom-small">
+         <fo-button *ngIf="uploading == false"
+                    (trigger)="input.click()"
                     [white]="true"
                     [materialIcon]="materialIcon"
                     [disabled]="disabled"
                     icon="folder_open">
          </fo-button>
+         <fo-load-indicator *ngIf="uploading == true"></fo-load-indicator>
       </div>
    </div>
 </fo-label>
