--- a/lib/components/fo_file_upload/fo_file_upload_component.scss
+++ b/lib/components/fo_file_upload/fo_file_upload_component.scss
@@ -7,5 +7,11 @@
     input {
       display: none;
     }
+    div#content {
+      display: flex;
+      height: 2.5em;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
