--- a/lib/components/fo_file_upload/fo_file_upload_component.scss
+++ b/lib/components/fo_file_upload/fo_file_upload_component.scss
@@ -12,6 +12,9 @@
       height: 2.5em;
       align-items: center;
       justify-content: center;
+      fo-load-indicator {
+        margin-right: 0.3em;
+      }
     }
   }
 }
