minor added border radius to carousel

--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -30,6 +30,7 @@ $slideTransitionSpeed: 200ms;
     -ms-transition: background-color 200ms;
     -o-transition: background-color 200ms;
     transition: background-color 200ms;
+    border-radius: 5px;
 
     font-size: 24px;
   }
