--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -11,6 +11,7 @@ $transitionSpeed: 0.3s ease;
 @import "components/fo_tab/mixins";
 @import "components/fo_text_input/mixins";
 @import "components/fo_load_indicator/mixins";
+@import "components/fo_check/mixins";
 
 @mixin foregroundColor($color) {
   color: $color;
@@ -33,6 +34,7 @@ $transitionSpeed: 0.3s ease;
   $alertColorBright: lighten($alertColor, $lightstep);
 
   @include fo-load-indicator-color($primaryColor);
+  @include fo-check-colors($primaryColor, $grayColorBright);
   @include fo-button-colors(white, $primaryColor, $grayColorBright);
   @include fo-dropdown-border-color($grayColorBright);
   @include fo-dropdown-list-colors($primaryColor, $grayColor, $grayColorBright);
