added style for disabled check

--- a/lib/components/fo_check/_mixins.scss
+++ b/lib/components/fo_check/_mixins.scss
@@ -11,7 +11,7 @@
 
         input:disabled ~ .mark {
             border-color: $border !important;
-            background-color: $border !important;
+            background-color: darken(white, 5%) !important;
         }
     }
 }
