made components similar height (40px)

--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -34,7 +34,7 @@
 
       div#selectedValue {
         flex: 1;
-        line-height: 160%;
+        line-height: 1.5em;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
