--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -7,7 +7,7 @@
   button {
     width: 100%;
     height: 100%;
-    line-height: 150%;
+    line-height: 1.5em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
