--- a/lib/components/fo_number_input/fo_number_input_component.scss
+++ b/lib/components/fo_number_input/fo_number_input_component.scss
@@ -1,20 +1,15 @@
-@import "package:fo_components/components/fo_text_input/mixins";
-@import "package:fo_components/components/fo_button/mixins";
+//@import "package:fo_components/components/fo_text_input/mixins";
+//@import "package:fo_components/components/fo_button/mixins";
 
 :host {
   display: block;
-
-  @include fo-text-input-vertical-padding(0.5em, 0.5em);
-  @include fo-button-vertical-padding(0.5em);
-
   div#flexContainer {
     display: flex;
     align-items: stretch;
     justify-content: center;
-    height: 100%;
 
     fo-text-input {
-      flex: auto;
+      box-sizing: border-box;
     }
 
     span#trailing {
